more security updates

--- a/nginx/nginx-configs/default.conf
+++ b/nginx/nginx-configs/default.conf
@@ -24,16 +24,10 @@ server {
     }
     location /errors { deny all; 
     }
-    location /classic/uploads { deny all; 
-    }
-    location /classic/logs { deny all; 
-    }
-    location /classic/js { deny all; 
-    }
-    location /classic/errors { deny all; 
+    location /style { deny all; 
     }
     location ~ \.css {
-    add_header  Content-Type    text/css;
+        add_header  Content-Type    text/css;
     }
     location ~ \.js {
         add_header  Content-Type    application/x-javascript;
