--- a/nginx/nginx-configs/nginx.conf
+++ b/nginx/nginx-configs/nginx.conf
@@ -50,6 +50,6 @@ http {
     real_ip_recursive on;
 
     # Custom error pages
-    error_page   403  =  /error/403_denied.html;
+    error_page   403  =  /error/404_notfound.html;
     error_page   404  =  /error/404_notfound.html;
 }
