--- a/nginx/nginx-configs/default.conf
+++ b/nginx/nginx-configs/default.conf
@@ -2,29 +2,40 @@ server {
     listen 0.0.0.0:80;
     root /var/www/html;
     client_max_body_size 2M;
+
     location / {
         index index.php index.html;
+        try_files $uri $uri/ @php;
     }
 
     # Define PHP Location
+    location @php {
+        rewrite ^/(.*)$ /$1.php last;
+    }
+
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param REMOTE_ADDR $http_x_real_ip;
     }
 
-    # Denny locations users need not access
-    location /uploads { deny all; 
+    # Deny access to specific locations
+    location /uploads {
+        deny all;
     }
-    location /logs { deny all; 
+    location /logs {
+        deny all;
     }
-    location /js { deny all; 
+    location /js {
+        deny all;
     }
-    location /errors { deny all; 
+    location /errors {
+        deny all;
     }
-    location /style { deny all; 
+    location /style {
+        deny all;
     }
     location ~ \.css {
         add_header  Content-Type    text/css;
@@ -32,4 +43,4 @@ server {
     location ~ \.js {
         add_header  Content-Type    application/x-javascript;
     }
-    }
+}
